stateDiagram-v2
    [*] --> open

    state "Fase 1: Inicio" as fase1 {
        open --> assigned : Solicitud y visita (Pasos 1-2)
        open --> cancelled : Cancelar
    }

    state "Fase 2: Ejecucion" as fase2 {
        assigned --> in_progress : Iniciar ejecucion (Paso 6)
        assigned --> on_hold : Pausar
        assigned --> cancelled : Cancelar
        in_progress --> completed : Completar ejecucion (Paso 7)
        in_progress --> on_hold : Pausar
        in_progress --> cancelled : Cancelar
        on_hold --> in_progress : Reanudar
        on_hold --> cancelled : Cancelar
    }

    state "Fase 3: Cierre Administrativo" as fase3 {
        completed --> ready_for_invoicing : Preparar acta (Paso 8)
        completed --> closed : Cierre directo
        completed --> cancelled : Cancelar
        ready_for_invoicing --> acta_signed : Firmar acta (Paso 9)
        ready_for_invoicing --> closed
        ready_for_invoicing --> cancelled
        acta_signed --> ses_sent : Radicar SES (Paso 10)
        acta_signed --> cancelled
        ses_sent --> invoice_approved : Aprobar factura (Pasos 12-13)
        ses_sent --> cancelled
        invoice_approved --> paid : Confirmar pago (Paso 14)
        invoice_approved --> closed : Cerrar
        invoice_approved --> cancelled
        paid --> closed : Cierre definitivo
    }

    closed --> [*]
    cancelled --> [*]
